codigo/basico/string_no_valido_1.out
  File "<stdin>", line 2
    print('texto")
                  ^
SyntaxError: EOL while scanning string literal